tests/valid/if/v26_cond_assign.f
program condassign
  integer x, y
  x = 10
  y = 0
  if (x .GT. 5) then
    y = x * 2
  endif
  print *, y
end
