tests/invalid/io/i17_read_bad_fmtlab.f
program badfmt
  integer x
  read(5, 999) x
end
